# RetinaVesselSegmentation

RetinaCM/: CMakeLists.txt  README_eng.txt  README_ita.txt
RetinaCM-BUILD/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aia.sln  cmake_install.cmake
RetinaCM-BUILD/project0/: cmake_install.cmake  image_management.cpp  image_management.h  main.cpp  project0.vcxproj  project0.vcxproj.filters
RetinaCM-BUILD/utils/: cmake_install.cmake
RetinaCM-BUILD/utils/aia/: aiaUtils.vcxproj  aiaUtils.vcxproj.filters  cmake_install.cmake
RetinaCM-BUILD/utils/ucas/: cmake_install.cmake  ucasUtils.vcxproj  ucasUtils.vcxproj.filters
RetinaCM/project0/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
RetinaCM/utils/: CMakeLists.txt
RetinaCM/utils/aia/: CMakeLists.txt  aiaConfig.cpp  aiaConfig.h
RetinaCM/utils/ucas/: CMakeLists.txt  ucasBreastUtils.cpp  ucasBreastUtils.h  ucasConfig.h  ucasExceptions.h  ucasFileUtils.h  ucasImageUtils.cpp  ucasImageUtils.h  ucasLog.h  ucasMachineLearningUtils.h  ucasMathUtils.h  ucasMultithreading.cpp  ucasMultithreading.h  ucasStringUtils.h
